[fix] Fixed a bug where the recipe source might wrap to a new column (5m)

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -71,6 +71,7 @@ form.search-form {
   .recipe-source {
     font-size: 0.875em;
     color: #aaa;
+    margin: 0 0 0.5714285714em;
 
     a { color: inherit; }
   }
